Update hero description and metadata

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <title>Rozpočty v KROS 4 (ÚRS, OTSKP) – mosty, železnice, monolity</title>
-  <meta name="description" content="Rozpočtář v ČR: KROS 4, cenová soustava ÚRS a OTSKP. Mosty, železniční stavby, monolitické konstrukce. Ceník a poptávka online.">
-  <meta property="og:title" content="Rozpočty v KROS 4 (ÚRS, OTSKP)">
-  <meta property="og:description" content="Rozpočty a kontrola v KROS 4 podle ÚRS a OTSKP. Mosty, železnice, monolity.">
+  <title>Rozpočty v KROS 4 (ÚRS, OTSKP) – mosty, železnice, rodinné domy i pozemní stavby</title>
+  <meta name="description" content="Zpracovávám a kontroluji stavební rozpočty v programu KROS 4 s využitím cenové soustavy ÚRS a OTSKP. Mám zkušenosti z dopravních, inženýrských i pozemních staveb – mosty, železnice, monolity, rodinné domy a běžné stavební práce. Pracuji pečlivě, přehledně a s důrazem na přesnost, férové jednání a praktické řešení.">
+  <meta property="og:title" content="Rozpočty v KROS 4 (ÚRS, OTSKP) – mosty, železnice, rodinné domy i pozemní stavby">
+  <meta property="og:description" content="Zpracovávám a kontroluji stavební rozpočty v programu KROS 4 s využitím cenové soustavy ÚRS a OTSKP. Mám zkušenosti z dopravních, inženýrských i pozemních staveb – mosty, železnice, monolity, rodinné domy a běžné stavební práce. Pracuji pečlivě, přehledně a s důrazem na přesnost, férové jednání a praktické řešení.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='1200' height='630'><rect width='100%' height='100%' fill='%23141a15'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-family='Arial' font-size='64' fill='%23e8efe6'>StavTOV</text></svg>">
   <meta property="og:url" content="https://example.com">
@@ -79,10 +79,10 @@
   {
     "@context":"https://schema.org",
     "@type":"Service",
-    "serviceType":"Rozpočty v KROS 4 (ÚRS, OTSKP)",
+    "serviceType":"Rozpočty v KROS 4 (ÚRS, OTSKP) – mosty, železnice, rodinné domy i pozemní stavby",
     "provider":{"@type":"Organization","name":"StavTOV"},
     "areaServed":"CZ",
-    "description":"Rozpočty a kontrola rozpočtů v KROS 4 s využitím cenové soustavy ÚRS a OTSKP. Mosty, železniční a monolitické stavby.",
+    "description":"Zpracovávám a kontroluji stavební rozpočty v programu KROS 4 s využitím cenové soustavy ÚRS a OTSKP. Mám zkušenosti z dopravních, inženýrských i pozemních staveb – mosty, železnice, monolity, rodinné domy a běžné stavební práce. Pracuji pečlivě, přehledně a s důrazem na přesnost, férové jednání a praktické řešení.",
     "offers":{
       "@type":"Offer",
       "priceCurrency":"CZK",
@@ -117,8 +117,10 @@
     <section class="hero">
       <div class="wrap">
         <div class="panel">
-          <h1>Rozpočty v KROS&nbsp;4 (ÚRS, OTSKP) — mosty, železnice, monolity</h1>
-          <p class="lead">Dělám rozpočty a kontrolu rozpočtů v <strong>KROS&nbsp;4</strong> s využitím <strong>cenové soustavy&nbsp;ÚRS</strong> a <strong>OTSKP</strong>. Zkušenost z mostních, železničních a monolitických staveb. Rychle, přehledně, bez planých slibů.</p>
+          <h1>Rozpočty v KROS&nbsp;4 (ÚRS, OTSKP) — mosty, železnice, rodinné domy i pozemní stavby</h1>
+          <p class="lead">Zpracovávám a kontroluji stavební rozpočty v programu <strong>KROS&nbsp;4</strong> s využitím <strong>cenové soustavy&nbsp;ÚRS</strong> a <strong>OTSKP</strong>.</p>
+          <p class="lead">Mám zkušenosti z dopravních, inženýrských i pozemních staveb – mosty, železnice, monolity, rodinné domy a běžné stavební práce.</p>
+          <p class="lead">Pracuji pečlivě, přehledně a s důrazem na přesnost, férové jednání a praktické řešení.</p>
           <div class="hero-cta">
             <a class="btn" href="#kontakt" aria-label="Odeslat poptávku">Poptat rozpočet</a>
             <a class="btn ghost" href="#nahrat" aria-label="Nahrát podklady">Nahrát podklady</a>
