Add GDPR notice and update contact details

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     "@type":"Organization",
     "name":"StavTOV",
     "email":"alpro1000@gmail.com",
+    "telephone":"+420777896741",
     "url":"https://example.com",
     "logo":"https://example.com/logo.png",
     "address":{"@type":"PostalAddress","addressCountry":"CZ"}
@@ -109,6 +110,7 @@
         <a href="#sluzby">Služby</a>
         <a href="#cenik">Ceník</a>
         <a href="#kontakt">Kontakt</a>
+        <a href="#gdpr">GDPR</a>
       </nav>
     </div>
   </header>
@@ -241,6 +243,7 @@
               <span id="form-status" class="muted" role="status" aria-live="polite"></span>
             </div>
             <input type="hidden" name="subject" value="Poptávka – Rozpočty KROS 4 (ÚRS/OTSKP)">
+            <p class="muted" style="font-size:14px">Odesláním formuláře potvrzujete, že jste si přečetli informace o zpracování osobních údajů a souhlasíte se zpracováním údajů pro účely vyřízení poptávky.</p>
           </form>
         </div>
       </div>
@@ -251,7 +254,7 @@
         <div class="card">
           <h2>Kontakt</h2>
           <p><strong>E-mail:</strong> <a href="mailto:alpro1000@gmail.com">alpro1000@gmail.com</a></p>
-          <p><strong>Telefon:</strong> <span class="muted">+420&nbsp;XXX&nbsp;XXX&nbsp;XXX</span> (dle domluvy)</p>
+          <p><strong>Telefon:</strong> <a href="tel:+420777896741">+420&nbsp;777&nbsp;896&nbsp;741</a></p>
           <p class="muted">Působnost: celá ČR · online schůzka do 24&nbsp;h dle vytížení.</p>
         </div>
         <div class="card">
@@ -269,6 +272,23 @@
             <li>Projekt / specifikace (PDF/ZIP)</li>
             <li>Edice ÚRS / požadavek na OTSKP</li>
           </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="gdpr" class="section">
+      <div class="wrap grid">
+        <div class="card">
+          <h2>GDPR – zpracování osobních údajů</h2>
+          <p class="muted">Správcem osobních údajů je <strong>StavTOV</strong>, e-mail <a href="mailto:alpro1000@gmail.com">alpro1000@gmail.com</a>, telefon <a href="tel:+420777896741">+420&nbsp;777&nbsp;896&nbsp;741</a>. Osobní údaje zadané ve formuláři nebo sdělené telefonicky slouží pouze k vyřízení poptávky a navazující komunikaci.</p>
+          <ul class="list">
+            <li><strong>Právní základ:</strong> čl. 6 odst. 1 písm. b) a f) GDPR a § 11 zákona č. 110/2019 Sb., o zpracování osobních údajů.</li>
+            <li><strong>Rozsah údajů:</strong> identifikační a kontaktní údaje (jméno, e-mail, telefon), údaje k zakázce a dobrovolně poskytnuté přílohy.</li>
+            <li><strong>Doba uchování:</strong> po dobu trvání obchodní komunikace a nejdéle 3 roky od posledního kontaktu, pokud právní předpis nevyžaduje delší dobu.</li>
+            <li><strong>Příjemci:</strong> třetí strany pouze v nezbytném rozsahu (např. poskytovatel e-mailových služeb, Formspree jako zprostředkovatel formuláře) s uzavřeným zpracovatelským vztahem.</li>
+            <li><strong>Práva subjektů údajů:</strong> právo na přístup, opravu, výmaz, omezení zpracování, námitku, přenositelnost údajů a právo podat stížnost u ÚOOÚ.</li>
+          </ul>
+          <p class="muted">Máte-li dotazy ke zpracování údajů, kontaktujte prosím <a href="mailto:alpro1000@gmail.com">alpro1000@gmail.com</a>. Stížnost můžete podat u Úřadu pro ochranu osobních údajů (<a href="https://www.uoou.cz/" target="_blank" rel="noopener">www.uoou.cz</a>).</p>
         </div>
       </div>
     </section>
