--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
           <p>Tato kombinace umožňuje přesné ocenění <strong>rodinných domů, pozemních, dopravních i inženýrských staveb</strong> podle aktuálních jednotkových cen.</p>
           <ul class="list">
             <li>Položkové rozpočty pro rodinné domy, přístavby, rekonstrukce</li>
-            <li>Exporty do XLSX, PDF, ISDOC, IFC rozhraní dle domluvy</li>
+            <li>Exporty do XLSX, PDF, XC4 rozhraní dle domluvy</li>
             <li>Napojení na interní systémy investora nebo generálního dodavatele</li>
           </ul>
           <p class="muted" style="margin-top:16px">
@@ -401,7 +401,6 @@
             <li>Rozklad na lidské zdroje (hodiny práce)</li>
             <li>Stroje a mechanizmy (hodiny provozu)</li>
             <li>Materiály (jednotky, ceny)</li>
-            <li>Export do XLSX pro další zpracování</li>
           </ul>
         </div>
       </div>
@@ -421,6 +420,7 @@
             <span class="badge">ÚRS</span>
             <span class="badge">OTSKP</span>
             <span class="badge">Výkaz výměr</span>
+            <span class="badge">Soupis prací﻿</span>
           </div>
         </div>
       </div>
