Update output formats in index.html

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
           <ul class="list">
             <li>ÚRS – databázové ceny, edice dle projektu</li>
             <li>OTSKP – hladina cen Ministerstva dopravy</li>
-            <li>Výstupy XLSX / PDF / ISDOC</li>
+            <li>Výstupy XLSX / PDF / XC4</li>
           </ul>
         </div>
         <div class="card">
@@ -421,6 +421,8 @@
             <span class="badge">OTSKP</span>
             <span class="badge">Výkaz výměr</span>
             <span class="badge">Soupis prací﻿</span>
+            <span class="badge">Rozpočet﻿</span>
+            
           </div>
         </div>
       </div>
